# chess-core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/toolchains/: i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
include/core/: side.hpp  win.hpp
include/core/board/: board.cpp  board.hpp  move.cpp  move.hpp  piece.hpp  point.hpp  position.cpp  position.hpp  side.hpp
include/core/game/: game.hpp  winner.hpp
include/core/player/: ai.hpp  dummy.hpp  player.cpp  player.hpp
source/core/board/: move.cpp  piece.cpp  point.cpp  position.cpp  side.cpp
source/core/game/: game.cpp
source/core/player/: ai.cpp  dummy.cpp
test/: test.cpp
test/core/board/: move.cpp  piece.cpp  point.cpp  position.cpp
uci/: log.cpp  log.hpp  main.cpp  server.cpp  server.hpp
